JpegEncoderEXIF/JpegEncoderEXIF.h

typedef struct _exif_buffer
{
  unsigned char *data;
  unsigned int size;
} exif_buffer;
void exif_buf_free (exif_buffer * buf);
exif_buffer *exif_new_buf(unsigned char *data, unsigned int size);
void exif_entry_set_string (ExifData * pEdata, ExifIfd eEifd, ExifTag eEtag,
    const char *data);
void exif_entry_set_undefined (ExifData * pEdata, ExifIfd eEifd, ExifTag eEtag,
    exif_buffer * buf);
void exif_entry_set_byte (ExifData * pEdata, ExifIfd eEifd, ExifTag eEtag,
    ExifByte n);
void exif_entry_set_short (ExifData * pEdata, ExifIfd eEifd, ExifTag eEtag,
    ExifShort n);
void exif_entry_set_long (ExifData * pEdata, ExifIfd eEifd, ExifTag eEtag,
    ExifLong n);
void exif_entry_set_rational (ExifData * pEdata, ExifIfd eEifd, ExifTag eEtag,
    ExifRational r);
void exif_entry_set_sbyte (ExifData * pEdata, ExifIfd eEifd, ExifTag eEtag,
    ExifSByte n);
void exif_entry_set_sshort (ExifData * pEdata, ExifIfd eEifd, ExifTag eEtag,
    ExifSShort n);
void exif_entry_set_slong (ExifData * pEdata, ExifIfd eEifd, ExifTag eEtag,
    ExifSLong n);
void exif_entry_set_srational (ExifData * pEdata, ExifIfd eEifd, ExifTag eEtag,
    ExifSRational r);
/* SP: Function to remove tags with the same interface as the other
 * functions from here.
 */
void exif_entry_unset(ExifData * pEdata, ExifIfd eEifd, ExifTag eEtag);
/* SP: GPS setters.  */
void exif_entry_set_gps_longitude(ExifData * pEdata, ExifRational r1, ExifRational r2, ExifRational r3);
void exif_entry_set_gps_longitude_ref_east(ExifData * pEdata);
void exif_entry_set_gps_longitude_ref_west(ExifData * pEdata);
void exif_entry_set_gps_latitude(ExifData * pEdata, ExifRational r1, ExifRational r2, ExifRational r3);
void exif_entry_set_gps_latitude_ref_north(ExifData * pEdata);
void exif_entry_set_gps_latitude_ref_south(ExifData * pEdata);
void exif_entry_set_gps_altitude(ExifData * pEdata, ExifRational r1);
void exif_entry_set_gps_altitude_ref_above_sea_level(ExifData * pEdata);
void exif_entry_set_gps_altitude_ref_below_sea_level(ExifData * pEdata);
void exif_entry_set_gps_version(ExifData * pEdata, ExifByte r1, ExifByte r2, ExifByte r3, ExifByte r4);
void exif_entry_set_gps_dop(ExifData * pEdata, ExifRational r1);
void exif_entry_set_gps_img_direction(ExifData * pEdata, ExifRational r1);
void exif_entry_set_gps_img_direction_ref_true(ExifData * pEdata);
void exif_entry_set_gps_img_direction_ref_magnetic(ExifData * pEdata);
void exif_entry_set_gps_track(ExifData * pEdata, ExifRational r1);
void exif_entry_set_gps_track_ref_true(ExifData * pEdata);
void exif_entry_set_gps_track_ref_magnetic(ExifData * pEdata);
void exif_entry_set_gps_speed(ExifData * pEdata, ExifRational r1);
void exif_entry_set_gps_speed_ref_kilometers(ExifData * pEdata);
void exif_entry_set_gps_speed_ref_miles(ExifData * pEdata);
void exif_entry_set_gps_speed_ref_knots(ExifData * pEdata);
/* SP: Generic GPS setters. */
void exif_entry_set_gps_byte1(ExifData * pEdata, ExifIfd eEifd, ExifTag eEtag, ExifByte r1);
void exif_entry_set_gps_rational1(ExifData * pEdata, ExifIfd eEifd, ExifTag eEtag, ExifRational r1);
void exif_entry_set_gps_rational3(ExifData * pEdata, ExifIfd eEifd, ExifTag eEtag, ExifRational r1, ExifRational r2, ExifRational r3);
void exif_entry_set_gps_string (ExifData * pEdata, ExifIfd eEifd, ExifTag eEtag, const char *s);